Complete Landing Page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    min-height: 100vh;
+    background: radial-gradient(92.87% 92.87% at 50.00% 7.13%, #36016E 0.21%, #090723 87.93%);
+}
+
 .bg-radial {
     background: radial-gradient(92.87% 92.87% at 50.00% 7.13%, #36016E 0.21%, #090723 87.93%);
 }
