--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,3 +18,22 @@ body {
 .all-shadow {
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.25);
 }
+
+::-webkit-scrollbar {
+    height: 1rem;
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 100vh;
+    background-color: #7109E0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #831fee;
+}
